[metadata]
name = SiyuanYuque
version = 0.0.2
author = Clouder
author_email = clouder0@outlook.com
description = Sync SiYuan with Yuque
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/clouder0/SiyuanYuque
project_urls =
    Bug Tracker = https://github.com/Clouder0/SiyuanYuque/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    yuque-py
    toml
    aiohttp
python_requires = >=3.6
